--- a/static/css/partials/post/_social.scss
+++ b/static/css/partials/post/_social.scss
@@ -8,7 +8,7 @@
 		display: flex;
 		flex-wrap: nowrap;
 		align-items: flex-start;
-		@include container(header, mobile, $container-mobile) {
+		@include container(header, mobile, $iphone-max) {
 			justify-content: flex-end;
 		}
 	}
